--- a/TrabalhoSemestre/web/template/Decorator.xhtml
+++ b/TrabalhoSemestre/web/template/Decorator.xhtml
@@ -3,7 +3,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 	<h:head>
-            <title>Exemplo Bootstrap e JSF</title>
+            <title>Principal</title>
 	</h:head>
 	<h:form>
             <h:outputStylesheet library="css" name="bootstrap.min.css"/>
@@ -15,12 +15,12 @@
                 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html">UNISC - Programação WEB</a>
+                        <a class="navbar-brand" href="index.xhtml">UNISC - Programação WEB</a>
                     </div>
                     <!-- Top Menu Items -->
                     <ul class="nav navbar-right top-nav">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Simon <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Christian <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="#"><i class="fa fa-fw fa-user"></i> Perfil</a>
@@ -68,5 +68,5 @@
             </div>
 	</h:form>
     <script src="http://localhost:8084/ExemploDecorationJSF/resources/js/jquery.js"></script>
-    <script src="http://localhost:8084/ExemploDecorationJSF/resources/js/bootstrap.min.js"></script>    
+    <script src="http://localhost:8084/ExemploDecorationJSF/resources/js/bootstrap.min.js"></script>
 </html>
